@@ -1,0 +1,13 @@
+@include "psddldata/partition.ddl";
+@include "psddl_hdf2psana/xtc-h5.ddl" [[headers("psddl_hdf2psana/xtc.h")]];
+
+@package Partition {
+
+@h5schema Source
+  [[version(0)]]
+  [[default]]
+  [[embedded]]
+{
+}
+
+} //- @package Partition
